fix: z-index

--- a/src/contentsHelpers/style.css
+++ b/src/contentsHelpers/style.css
@@ -15,7 +15,7 @@
   -webkit-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.84);
   box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.84);
   opacity: 1;
-  z-index: 42069;
+  z-index: 10;
   text-align: left;
   position: absolute;
   top: 1px;
